[metadata]
name = playnetmano_rm
summary = playnetmano_rm is a centralised Management of Resources.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    playnetmano_rm

[entry_points]
console_scripts =
    playnetmano_rm-api = playnetmano_rm.cmd.api:main
    playnetmano_rm-engine = playnetmano_rm.cmd.engine:main
    playnetmano_rm-manage = playnetmano_rm.cmd.manage:main

tempest.test_plugins =
    playnetmano_rm_tests = playnetmano_rm.tests.tempest.scenario.plugin:playnetmano_rmTempestPlugin

oslo.config.opts =
    playnetmano_rm.common.config = playnetmano_rm.common.config:list_opts
    playnetmano_rm.engine.quota_manager = playnetmano_rm.engine.quota_manager:list_opts
    playnetmano_rm.engine.kingbird_lock = playnetmano_rm.engine.playnetmano_rm_lock:list_opts
    playnetmano_rm.common.api.api_config = playnetmano_rm.api.api_config:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = playnetmano_rm/locale
domain = playnetmano_rm

[update_catalog]
domain = playnetmano_rm
output_dir = playnetmano_rm/locale
input_file = playnetmano_rm/locale/playnetmano_rm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = playnetmano_rm/locale/playnetmano_rm.pot
